--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,2 +1,6 @@
-#spring.h2.console.enabled=true
-#spring.h2.console.path=/h2-console
+spring.jpa.database=MYSQL
+spring.datasource.url=jdbc:mysql://localhost/algamoney-api?serverTimezone=UTC
+spring.datasource.username=root
+spring.datasource.password=root
+
+spring.jpa.show-sql=true
